// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly filter analyses by category 1`] = `
<ul
  className="project-activity-versions-list"
  onScroll={[Function]}
  style={
    {
      "marginTop": 36,
    }
  }
>
  <li
    key="E2"
  >
    <div
      className="project-activity-version-badge first"
    >
      <Tooltip
        mouseEnterDelay={0.5}
        overlay="version 6.4"
      >
        <h2
          className="analysis-version"
        >
          6.4
        </h2>
      </Tooltip>
    </div>
    <ul
      className="project-activity-days-list"
    >
      <li
        className="project-activity-day"
        data-day="ISO.1477267200000"
        key="1477267200000"
      >
        <h3>
          <DateFormatter
            date={1477267200000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-24T16:33:50.000Z,
                "events": [
                  {
                    "category": "QUALITY_GATE",
                    "key": "E1",
                    "name": "Quality gate changed to red...",
                  },
                ],
                "key": "A4",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={true}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={false}
            key="A4"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`should correctly filter analyses by date range 1`] = `
<ul
  className="project-activity-versions-list"
  onScroll={[Function]}
  style={
    {
      "marginTop": 36,
    }
  }
>
  <li
    key="E1"
  >
    <div
      className="project-activity-version-badge first"
    >
      <Tooltip
        mouseEnterDelay={0.5}
        overlay="version 6.5-SNAPSHOT"
      >
        <h2
          className="analysis-version"
        >
          6.5-SNAPSHOT
        </h2>
      </Tooltip>
    </div>
    <ul
      className="project-activity-days-list"
    >
      <li
        className="project-activity-day"
        data-day="ISO.1477526400000"
        key="1477526400000"
      >
        <h3>
          <DateFormatter
            date={1477526400000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-27T16:33:50.000Z,
                "events": [
                  {
                    "category": "VERSION",
                    "key": "E1",
                    "name": "6.5-SNAPSHOT",
                  },
                ],
                "key": "A1",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={true}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={true}
            key="A1"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`should render correctly: application 1`] = `
<ul
  className="project-activity-versions-list"
  onScroll={[Function]}
  style={
    {
      "marginTop": undefined,
    }
  }
>
  <li
    key="E1"
  >
    <div
      className="project-activity-version-badge first"
    >
      <Tooltip
        mouseEnterDelay={0.5}
        overlay="version 6.5-SNAPSHOT"
      >
        <h2
          className="analysis-version"
        >
          6.5-SNAPSHOT
        </h2>
      </Tooltip>
    </div>
    <ul
      className="project-activity-days-list"
    >
      <li
        className="project-activity-day"
        data-day="ISO.1477526400000"
        key="1477526400000"
      >
        <h3>
          <DateFormatter
            date={1477526400000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-27T16:33:50.000Z,
                "events": [
                  {
                    "category": "VERSION",
                    "key": "E1",
                    "name": "6.5-SNAPSHOT",
                  },
                ],
                "key": "A1",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={false}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={true}
            key="A1"
            selected={false}
            updateSelectedDate={[Function]}
          />
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-27T12:21:15.000Z,
                "events": [],
                "key": "A2",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={false}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={true}
            isFirst={false}
            key="A2"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
    </ul>
  </li>
  <li
    key="E2"
  >
    <div
      className="project-activity-version-badge"
    >
      <Tooltip
        mouseEnterDelay={0.5}
        overlay="version 6.4"
      >
        <h2
          className="analysis-version"
        >
          6.4
        </h2>
      </Tooltip>
    </div>
    <ul
      className="project-activity-days-list"
    >
      <li
        className="project-activity-day"
        data-day="ISO.1477440000000"
        key="1477440000000"
      >
        <h3>
          <DateFormatter
            date={1477440000000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-26T12:17:29.000Z,
                "events": [
                  {
                    "category": "VERSION",
                    "key": "E2",
                    "name": "6.4",
                  },
                  {
                    "category": "OTHER",
                    "key": "E3",
                    "name": "foo",
                  },
                ],
                "key": "A3",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={false}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={false}
            key="A3"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
      <li
        className="project-activity-day"
        data-day="ISO.1477267200000"
        key="1477267200000"
      >
        <h3>
          <DateFormatter
            date={1477267200000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-24T16:33:50.000Z,
                "events": [
                  {
                    "category": "QUALITY_GATE",
                    "key": "E1",
                    "name": "Quality gate changed to red...",
                  },
                ],
                "key": "A4",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={false}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={false}
            key="A4"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`should render correctly: default 1`] = `
<ul
  className="project-activity-versions-list"
  onScroll={[Function]}
  style={
    {
      "marginTop": 36,
    }
  }
>
  <li
    key="E1"
  >
    <div
      className="project-activity-version-badge first"
    >
      <Tooltip
        mouseEnterDelay={0.5}
        overlay="version 6.5-SNAPSHOT"
      >
        <h2
          className="analysis-version"
        >
          6.5-SNAPSHOT
        </h2>
      </Tooltip>
    </div>
    <ul
      className="project-activity-days-list"
    >
      <li
        className="project-activity-day"
        data-day="ISO.1477526400000"
        key="1477526400000"
      >
        <h3>
          <DateFormatter
            date={1477526400000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-27T16:33:50.000Z,
                "events": [
                  {
                    "category": "VERSION",
                    "key": "E1",
                    "name": "6.5-SNAPSHOT",
                  },
                ],
                "key": "A1",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={true}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={true}
            key="A1"
            selected={false}
            updateSelectedDate={[Function]}
          />
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-27T12:21:15.000Z,
                "events": [],
                "key": "A2",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={true}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={true}
            isFirst={false}
            key="A2"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
    </ul>
  </li>
  <li
    key="E2"
  >
    <div
      className="project-activity-version-badge"
    >
      <Tooltip
        mouseEnterDelay={0.5}
        overlay="version 6.4"
      >
        <h2
          className="analysis-version"
        >
          6.4
        </h2>
      </Tooltip>
    </div>
    <ul
      className="project-activity-days-list"
    >
      <li
        className="project-activity-day"
        data-day="ISO.1477440000000"
        key="1477440000000"
      >
        <h3>
          <DateFormatter
            date={1477440000000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-26T12:17:29.000Z,
                "events": [
                  {
                    "category": "VERSION",
                    "key": "E2",
                    "name": "6.4",
                  },
                  {
                    "category": "OTHER",
                    "key": "E3",
                    "name": "foo",
                  },
                ],
                "key": "A3",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={true}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={false}
            key="A3"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
      <li
        className="project-activity-day"
        data-day="ISO.1477267200000"
        key="1477267200000"
      >
        <h3>
          <DateFormatter
            date={1477267200000}
            long={true}
          />
        </h3>
        <ul
          className="project-activity-analyses-list"
        >
          <injectIntl(ProjectActivityAnalysis)
            addCustomEvent={[MockFunction]}
            addVersion={[MockFunction]}
            analysis={
              {
                "date": 2016-10-24T16:33:50.000Z,
                "events": [
                  {
                    "category": "QUALITY_GATE",
                    "key": "E1",
                    "name": "Quality gate changed to red...",
                  },
                ],
                "key": "A4",
                "projectVersion": "1.0",
              }
            }
            canAdmin={false}
            canCreateVersion={true}
            changeEvent={[MockFunction]}
            deleteAnalysis={[MockFunction]}
            deleteEvent={[MockFunction]}
            isBaseline={false}
            isFirst={false}
            key="A4"
            selected={false}
            updateSelectedDate={[Function]}
          />
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="boxed-group-inner"
>
  <div
    className="text-center"
  >
    <i
      className="spinner"
    />
  </div>
</div>
`;

exports[`should render correctly: no analyses 1`] = `
<div
  className="boxed-group-inner"
>
  <span
    className="note"
  >
    no_results
  </span>
</div>
`;
